--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@arcjet/inspect": "^1.0.0-beta.10",
     "@arcjet/ip": "^1.0.0-beta.10",
     "@arcjet/next": "^1.0.0-beta.10",
+    "@aws-sdk/client-s3": "^3.876.0",
+    "@aws-sdk/s3-request-presigner": "^3.876.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -49,12 +51,14 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
     "resend": "^6.0.1",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
